Revert "2nd index - timestamp"
This reverts commit 6efa9167fc98d32d6c3f86ffd6db1b8667f7d033.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Yay, it works on GitHub Pages ! - 20170704/2100</p>
+<p>Yay, it works on GitHub Pages !</p>
 </body>
 </html>
