--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Yay, it works on GitHub Pages !</p>
+<p>Yay, it works on GitHub Pages !.</p>
 </body>
 </html>
