--- a/404.html
+++ b/404.html
@@ -23,6 +23,6 @@ search_exclude: true
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
+  <p><strong>Page not found 😥</strong></p>
   <p>The requested page could not be found.</p>
 </div>
